# quantum-simulator

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  setup.py
.github/workflows/: python.yml
apps/: BUILD  Makefile  clfsim_amplitudes.cc  clfsim_base_cuda.cu  clfsim_base_custatevec.cu  clfsim_qtrajectory_cuda.cu  clfsim_von_neumann.cc  clfsimh_amplitudes.cc  clfsimh_base.cc  make.sh
build_tools/: test_libs.sh
check/: format-incremental
clfsimcirq/: __init__.py  clfsim_circuit.py  clfsim_simulator.py  clfsimh_simulator.py
docs/: bazel.md  cirq.md  input_format.md  overview.md  usage.md
install/test/: Dockerfile  docker-compose.yml
jupyter/: Dockerfile
lib/: BUILD  bits.h  bitstring.h  channel.h  circuit.h  circuit_clfsim_parser.h  circuit_noisy.h  expect.h  formux.h  fuser.h  fuser_basic.h  fuser_mqubit.h  gate.h  gate_appl.h  gates_cirq.h  gates_clfsim.h  hybrid.h  io.h  io_file.h  matrix.h  mps_simulator.h  mps_statespace.h  parfor.h  qtrajectory.h  run_clfsim.h  run_clfsimh.h  seqfor.h  simmux.h  simulator.h  simulator_avx.h  simulator_avx512.h  simulator_basic.h  simulator_cuda.h  simulator_cuda_kernels.h  simulator_custatevec.h  simulator_sse.h  statespace_sse.h  umux.h  unitary_calculator_sse.h  unitaryspace.h  (+10 more)
pybind_interface/: Dockerfile  GetPybind11.cmake  pybind_main.cpp  pybind_main.h
pybind_interface/avx2/: CMakeLists.txt  pybind_main_avx2.cpp  pybind_main_avx2.h
pybind_interface/avx512/: CMakeLists.txt  pybind_main_avx512.cpp  pybind_main_avx512.h
pybind_interface/cuda/: CMakeLists.txt  pybind_main_cuda.cpp  pybind_main_cuda.h
pybind_interface/custatevec/: CMakeLists.txt  pybind_main_custatevec.cpp  pybind_main_custatevec.h
pybind_interface/decide/: CMakeLists.txt  decide.cpp
pybind_interface/sse/: CMakeLists.txt  pybind_main_sse.cpp  pybind_main_sse.h
